# mlhc2

./: .gitignore  BIBLIOGRAPHY_VERIFICATION.md  README.md  RESULTS.md  RESULTS_EICU.md  RESULTS_GOSSIS.md  REVIEW_REPORT_POST_RESULTS.md  TRAINING_LOG.md  aggregate_seeds.py  improve_figures.py  pyproject.toml  reference_ledger.md  regenerate_figures.py  run_eicu_full.py  run_eicu_pipeline.py  run_expansion.py  run_expansion_analyses.py  run_faft.py  run_ga_faft.py  run_ga_faft_rsb.py  run_gossis_pipeline.py  run_mimic_pipeline.py  run_new_analyses.py  run_pipeline.py  run_psm_analysis.py  run_recalibration.py  run_rsb_only.py
experiments/exp_001/: e1_audit_results.csv  e1_gaps.csv  e2_intersectional.csv  e4_rsb.csv  e5_ml_improvement.csv
experiments/exp_eicu/: e1_audit_results.csv  e1_gaps.csv  e2_intersectional.csv  e3_asd_results.json  e4_rsb.csv  e5_ml_improvement.csv
experiments/exp_gossis/: e10_faft_attention.csv  e11_race_calibration.csv  e12_model_auroc_gaps.csv  e13_gap_summary.csv  e13_recalibration.csv  e14_psm_analysis.csv  e1_audit_results.csv  e1_gaps.csv  e2_intersectional.csv  e3_asd_results.json  e4_rsb.csv  e4_rsb_faft.csv  e4_rsb_full.csv  e5_ml_improvement.csv  e5_ml_improvement_faft.csv  e5_ml_improvement_full.csv  e6_score_conditional_mortality.csv  e7_clinical_thresholds.csv  e8_age_optimal_thresholds.csv  e_gafaft_age_auroc.csv  e_gafaft_age_auroc_full.csv  e_gafaft_rsb.csv  e_gafaft_rsb_full.csv  faft_preds.npy  ga_faft_preds.npy  hospital_stratified_race.csv  ml_preds_full.npy  (+3 more)
src/: __init__.py
supplementary/: interactive_dashboard.html
(+31 files in other folders)
