[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "icu-acuity-equity-audit"
version = "1.0.0"
description = "Systematic equity audit of ICU acuity scores with fairness-aware predictive models"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Anonymous Authors" },
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "xgboost>=1.7",
    "scipy>=1.10",
    "tqdm>=4.65",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
